# personal_mcp_server

./: .gitignore  main.py  pyproject.toml
test-server/: function_calling.py  mcp_client.py  mcp_sample.py  mcp_server.py  sse_client.py  sse_server.py
